added header background

--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@ body{
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+header{
+    background-image: url(img/bg-home.jpg);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
