--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ header{
     background-position: center;
     background-size: cover;
 }
+
+.nav-font{
+    color:#ffffff;
+    font-weight: bolder;
+    font-size: 20px;
+    padding-left: 20px
+    ;
+}
