--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ header{
     color:#ffffff;
     font-weight: bolder;
     font-size: 20px;
-    padding-left: 20px
-    ;
+    /* padding-left: 20px; */
 }
 .banner h1{
     font-size: 50px;
