--- a/style.css
+++ b/style.css
@@ -35,3 +35,17 @@ header{
 .icon{
     font-size: 35px;
 }
+.work-img-container{
+    overflow: hidden;
+}
+.work-img{
+    transition: transform 0.5s ease;
+    width: 100%;
+    height: 100%;
+    cursor: zoom-in;
+    
+}
+.work-img:hover{
+    transform: scale(1.5);
+
+}
